--- a/index.html
+++ b/index.html
@@ -16,11 +16,55 @@
 <body>
   <div class="header">
     <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-4">
+          <img class="img-fluid" src="images/logo_men.png">
+        </div>
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
+          <div class="header-logo-container">
+            <a href="http://www.gitei.edu.co/" target="_blank">
+              <img class="img-fluid" src="images/logo_gitei.png">
+            </a>
+            <a href="http://unal.edu.co/" target="_blank">
+              <img class="img-fluid" src="images/logo_unal.png">
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <div class="container-fluid main-menu">
-    <div class="container">
-    </div>
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contexto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Descripción</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Reto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Premios</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Participantes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Organizadores</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contacto</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
   </div>
   <div class="container-fluid banner">
     <div class="container main-content">
