--- a/index.html
+++ b/index.html
@@ -67,8 +67,36 @@
     </nav>
   </div>
   <div class="container-fluid banner">
-    <div class="container main-content">
+    <div class="row">
+      <div class="col-md-6 col-lg-4 first-col">
+        <div class="">
+          <h1 class="display-1"><b>Edujam</b> 2019</h1>
+          <h1 class="display-2">Primera infancia</h1>
+          <div>
+            <b>08 y 09 de febrero</b>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-8">
+        <div class="row">
+          <div class="col-md-12 col-lg-6">
+            <h1 class="display-2">¿Cómo inscribirme?</h1>
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+            ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit
+            praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+            <div>
+              <button type="button" class="btn btn-light">Inscripción individual</button>
+              <button type="button" class="btn btn-light">Inscripción grupal</button>
+            </div>
+          </div>
+          <div class="col-md-6 d-none d-lg-block">
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
+  <div class="container main-content">
+
   </div>
   <div class="footer">
     <div class="container">
