--- a/index.html
+++ b/index.html
@@ -42,22 +42,22 @@
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#">Contexto</a>
+            <a class="nav-link" href="#context">Contexto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Descripción</a>
+            <a class="nav-link" href="#description">Descripción</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Reto</a>
+            <a class="nav-link" href="#challenge">Reto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Premios</a>
+            <a class="nav-link" href="#award">Premios</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Participantes</a>
+            <a class="nav-link" href="#participant">Participantes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Organizadores</a>
+            <a class="nav-link" href="#organizings">Organizadores</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contacto</a>
@@ -71,8 +71,8 @@
       <div class="col-md-6 col-lg-4 first-col">
         <div class="">
           <h1 class="display-1"><b>Edujam</b> 2019</h1>
-          <h1 class="display-2">Primera infancia</h1>
-          <div>
+          <h1 class="display-3">Primera infancia</h1>
+          <div class="data-event">
             <b>08 y 09 de febrero</b>
           </div>
         </div>
@@ -81,9 +81,9 @@
         <div class="row">
           <div class="col-md-12 col-lg-6">
             <h1 class="display-2">¿Cómo inscribirme?</h1>
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-            ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit
-            praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis
+              nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit
+              praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
             <div>
               <button type="button" class="btn btn-light">Inscripción individual</button>
               <button type="button" class="btn btn-light">Inscripción grupal</button>
@@ -94,9 +94,45 @@
         </div>
       </div>
     </div>
+    <div class="row places">
+      <div class="col-md-4 text-center">
+        <div class="place-info">
+          <label>Bogotá D.C.</label>
+          <p>Palacio San Fancisco <br> Cll. 14 # 6 A - 48</p>
+          <button type="button" class="btn btn-light">¿Cómo llegar?</button>
+        </div>
+      </div>
+      <div class="col-md-4 text-center">
+        <div class="place-info">
+          <label>Bogotá D.C.</label>
+          <p>Palacio San Fancisco <br> Cll. 14 # 6 A - 48</p>
+          <button type="button" class="btn btn-light">¿Cómo llegar?</button>
+        </div>
+      </div>
+      <div class="col-md-4 text-center">
+        <div class="place-info">
+          <label>Bogotá D.C.</label>
+          <p>Palacio San Fancisco <br> Cll. 14 # 6 A - 48</p>
+          <button type="button" class="btn btn-light">¿Cómo llegar?</button>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="container main-content">
-
+    <div class="row">
+      <div class="col-md-4 image-container">
+        <img class="section-image left" src="images/img_section_1.png">
+      </div>
+      <div class="col-md-8">
+        <h1 id="context">Contexto</h1>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque
+          eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
+          <br>Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.
+          Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem
+          quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante.
+          Etiam sit amet orci eget eros faucibus tincidunt. Duis leo.</p>
+      </div>
+    </div>
   </div>
   <div class="footer">
     <div class="container">
