--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-4">
-          <img class="img-fluid" src="images/logo_men.png">
+          <img class="img-fluid men-logo" src="images/logo_men.png">
         </div>
         <div class="col-md-4"></div>
         <div class="col-md-4">
           <div class="header-logo-container">
-            <a href="http://www.gitei.edu.co/" target="_blank">
+            <a class="gitei-link" href="http://www.gitei.edu.co/" target="_blank">
               <img class="img-fluid" src="images/logo_gitei.png">
             </a>
-            <a href="http://unal.edu.co/" target="_blank">
+            <a class="unal-link" href="http://unal.edu.co/" target="_blank">
               <img class="img-fluid" src="images/logo_unal.png">
             </a>
           </div>
@@ -35,32 +35,32 @@
     </div>
   </div>
   <div class="container-fluid main-menu">
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-md bg-light navbar-light">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#context">Contexto</a>
+            <a class="nav-link inside-link" href="#context">Contexto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#description">Descripción</a>
+            <a class="nav-link inside-link" href="#description">Descripción</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#challenge">Reto</a>
+            <a class="nav-link inside-link" href="#challenge">Reto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#award">Premios</a>
+            <a class="nav-link inside-link" href="#award">Premios</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#participant">Participantes</a>
+            <a class="nav-link inside-link" href="#participant">Participantes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#organizings">Organizadores</a>
+            <a class="nav-link inside-link" href="#organizings">Organizadores</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contacto</a>
+            <a class="nav-link" href="http://www.gitei.edu.co/" target="_blank">Contacto</a>
           </li>
         </ul>
       </div>
