--- a/index.html
+++ b/index.html
@@ -17,11 +17,7 @@
   <div class="header">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md-4">
-          <img class="img-fluid men-logo" src="images/logo_men.png">
-        </div>
-        <div class="col-md-4"></div>
-        <div class="col-md-4">
+        <div class="col-md-12">
           <div class="header-logo-container">
             <a class="gitei-link" href="http://www.gitei.edu.co/" target="_blank">
               <img class="img-fluid" src="images/logo_gitei.png">
@@ -155,23 +151,34 @@
       </div>
       <div class="col-lg-8">
         <h1 id="context">Contexto</h1>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque
-          eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
-          <br>Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.
-          Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem
-          quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante.
-          Etiam sit amet orci eget eros faucibus tincidunt. Duis leo.</p>
+        <p>El ingreso al grado de transición es un gran acontecimiento para las niñas, los niños y sus familias, pues se inicia la gran aventura en el sistema educativo. Por ello, cuidar los detalles para que se sientan acogidos y reconocidos resulta fundamental e implica el reto de fortalecer el vínculo que se construye entre el hogar y la institución educativa. De esta forma, el colegio se constituye en un espacio donde las niñas y los niños quieren estar, porque allí viven experiencias, con sus pares y adultos que los acompañan, que les permiten sentirse valorados, al tiempo que potencian su deseo de conocer, vivir, explorar y aprender, al mismo tiempo que sus familias se sienten reconocidas y participan activamente en las dinámicas educativas, desde sus saberes y prácticas.</p>
+		<p>Por tal razón, El Ministerio de Educación Nacional ha venido adelantando acciones para asegurar las condiciones que generan bienestar en los niños y las niñas y, los motive a permanecer en esta gran aventura. Para lograrlo, ha planteado la construcción de una estrategia de acogida, bienestar y permanencia en preescolar con la participación activa de secretarías de educación, directivos docentes, maestros y familias en dicho proceso</p>
+		<p>La estrategia contempla, entre otras acciones, la entrega de un conjunto o set de objetos que tienen la intención de promover que las niñas, los niños y sus familias jueguen, exploren, narren, canten y creen; en articulación con los procesos educativos que se llevan a cabo en la institución durante todo el año escolar.  </p>
       </div>
     </div>
     <div class="row">
       <div class="col-lg-8">
         <h1 id="description">Descripción</h1>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque
-          eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
-          <br>Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.
-          Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem
-          quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante.
-          Etiam sit amet orci eget eros faucibus tincidunt. Duis leo.</p>
+        <p>Con el propósito de construir colectivamente propuestas para el set de objetos asociados a la estrategia de acogida, bienestar y permanencia, el Ministerio de Educación Nacional en convenio con la Universidad Nacional de Colombia invitan a un evento de cocreación tipo JAM. Será una maratón creativa destinada a reunir personas de diferentes perfiles, habilidades, conocimientos y experiencias previas, con el fin de concebir el diseño y prototipo de diversos elementos que se relacionan e integran para atender los intereses de las niñas y niños. </p>
+		<p>Este EduJAM se basa en el gran reto de construir una solución que sea aplicable para todo el país, que reconozca y valore la diversidad y sea respetuosa del medio ambiente.  </p>
+		<p>Durante los días del evento se contará con la participación de expertos en educación inicial y diseño, quienes harán un acompañamiento permanente a los participantes y les orientarán sobre las características del reto y el desarrollo del prototipo. Adicionalmente, los participantes se encontrarán con ejercicios que promuevan el proceso creativo y finalmente con los materiales necesarios para la elaboración de maquetas que les permitan exponer con claridad sus propuestas.</p>
+		<p>Información general del EduJAM:</p>
+		<ul>
+			<li>Inscripciones abiertas hasta el 13 de febrero de 2019</li>
+			<li>Fechas del EduJAM: 15 y 16 de febrero de 2019</li>
+			<li>Horario de participación: 08:00 am a 05:30 pm los dos días, por lo que deberán garantizar disponibilidad de tiempo para sacar el máximo provecho del espacio</li>
+			<li>Los organizadores del EduJAM, ofrecerán refrigerios durante la jornada, así como almuerzo a los participantes seleccionados</li>
+			<li>Ciudades: Bogotá, Pereira y Cartagena</li>
+			<li>Los cupos de participación en cada ciudad serán: 25 personas en Pereira, 25 en Cartagena y 50 en Bogotá, por lo que la inscripción no garantiza la participación en el evento, para el proceso de selección se tendrá en cuenta la información suministrada en la inscripción</li>
+			<li>Las personas seleccionadas serán informadas vía telefónica y/o por correo electrónico, en donde se confirmará la participación y se informará el detalle de la agenda de actividades a realizar durante los 2 días del evento</li>
+		</ul>
+		<h2>¿Cómo inscribirse?</h2>
+		<p>Existen dos modalidades de participación:</p>
+		<ol>
+			<li>Conforma un grupo de mínimo 3 y máximo 5 personas. Recuerda que entre más interdisciplinario, con mayor diversidad de habilidades o profesiones, más puntos de vista y mejores resultados podrán obtener.</li>
+			<li>Si no es sencillo reunir un equipo, no importa, inscríbete de forma individual y harás parte de uno que podrás conformar el día de la maratón. Déjalo en nuestras manos.</li>
+		</ol>
+		<p>Despliega los términos y condiciones del concurso para más información y apresúrate. Recuerda que los cupos son limitados para cada ciudad.</p>
       </div>
       <div class="col-lg-4 image-container">
         <img class="section-image right" src="images/img_section_2.png">
@@ -183,12 +190,17 @@
       </div>
       <div class="col-lg-8">
         <h1 id="challenge">Reto</h1>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque
-          eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
-          <br>Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.
-          Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem
-          quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante.
-          Etiam sit amet orci eget eros faucibus tincidunt. Duis leo.</p>
+        <p>Anualmente, más de medio millón de niños y niñas de 5 años ingresan al grado de transición; sin embargo, en este nivel se presenta la segunda tasa más alta de deserción. Nuestro reto es cambiar esta situación, garantizar su acogida y generar vivencias significativas que los motiven a continuar su trayectoria escolar.</p>
+		<p>Te invitamos a participar del proceso de creación de un set de objetos para niños y niñas que les permita: expresar, crear, aprender, explorar, jugar y disfrutar a lo largo de su experiencia educativa. Estos elementos en su conjunto aportarán en la interacción entre niñas, niños, familias y maestros.</p>
+		<h2>Participantes </h2>
+		<ul>
+			<li>Licenciado en Educación Infantil (educación de primera infancia, educación inicial educación infantil o áreas afines)</li>
+			<li>Artistas visuales, plásticos, dramáticos</li>
+			<li>Psicólogos</li>
+			<li>Ingenieros</li>
+			<li>Arquitectos</li>
+			<li>Familias o cuidadores</li>
+		</ul>
       </div>
     </div>
   </div>
