Se avanza estilo de los botones

--- a/index.html
+++ b/index.html
@@ -58,20 +58,20 @@
           <li class="nav-item">
             <a class="nav-link" data-toggle="modal" data-target="#modal1">Contacto</a>
           </li>
-          <div class="modal fade" id="modal1">
-            <div class="modal-dialog modal-xl">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h4 class="modal-title">Inscripción individual</h4>
-                  <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-                <div class="modal-body">
-                  <iframe src="form/index.html" height="100%" width="100%"></iframe>
-                </div>
+        </ul>
+        <div class="modal fade" id="modal1">
+          <div class="modal-dialog modal-xl">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h4 class="modal-title">Inscripción individual</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+              </div>
+              <div class="modal-body">
+                <iframe src="form/index.html" height="100%" width="100%"></iframe>
               </div>
             </div>
           </div>
-        </ul>
+        </div>
       </div>
     </nav>
   </div>
@@ -99,11 +99,11 @@
         </div>
       </div>
     </div>
-    <div class="row">
-      <a href="https://instrumentos.gitei.edu.co/952159?lang=es" class="btn btn-light" target="_blank">
+    <div class="row group-buttons">
+      <a href="https://instrumentos.gitei.edu.co/952159?lang=es" class="btn btn-light individual" target="_blank">
         Inscripción individual
       </a>
-      <a href="https://instrumentos.gitei.edu.co/937591?lang=es" class="btn btn-light" target="_blank">
+      <a href="https://instrumentos.gitei.edu.co/937591?lang=es" class="btn btn-light group" target="_blank">
         Inscripción grupal
       </a>
     </div>
