--- a/index.html
+++ b/index.html
@@ -108,7 +108,16 @@
       </a>
     </div>
     <div class="row places">
-      <div class="col-md-4 text-center">
+      <div class="col-sm-4 text-center">
+        <img class="img-fluid" src="images/bogota.png">
+      </div>
+      <div class="col-sm-4 text-center">
+        <img class="img-fluid" src="images/cartagena.png">
+      </div>
+      <div class="col-sm-4 text-center">
+        <img class="img-fluid" src="images/pereira.png">
+      </div>
+      <!--<div class="col-md-4 text-center">
         <div class="place-info">
           <label>Bogotá D.C.</label>
           <p>Palacio San Fancisco <br> Cll. 14 # 6 A - 48</p>
@@ -128,7 +137,7 @@
           <p>Palacio San Fancisco <br> Cll. 14 # 6 A - 48</p>
           <button type="button" class="btn btn-light">¿Cómo llegar?</button>
         </div>
-      </div>
+      </div>-->
     </div>
   </div>
   <div class="container main-content">
@@ -190,55 +199,55 @@
         <p>Anualmente, más de medio millón de niños y niñas de 5 años ingresan al grado de transición; sin embargo, en este nivel se presenta la segunda tasa más alta de deserción. Nuestro reto es cambiar esta situación, garantizar su acogida y
           generar vivencias significativas que los motiven a continuar su trayectoria escolar.</p>
         <p>Te invitamos a participar del proceso de creación de un set de objetos para niños y niñas que les permita: expresar, crear, aprender, explorar, jugar y disfrutar a lo largo de su experiencia educativa. Estos elementos en su conjunto
-          aportarán en la interacción entre niñas, niños, familias y maestros.</p>       
+          aportarán en la interacción entre niñas, niños, familias y maestros.</p>
       </div>
     </div>
 
 
     <div class="row">
-        <div class="col-lg-4 image-container">
-          <img class="section-image right" src="images/img_section_4.png">
-        </div>
-        <div class="col-lg-8">
-          <h1 id="participant">Participantes </h1>
-          <ul>
-            <li>Licenciado en Educación Infantil (educación de primera infancia, educación inicial educación infantil o áreas afines)</li>
-            <li>Artistas visuales, plásticos, dramáticos</li>
-            <li>Psicólogos</li>
-            <li>Ingenieros</li>
-            <li>Arquitectos</li>
-            <li>Familias o cuidadores</li>
-          </ul>
-        </div>
+      <div class="col-lg-4 image-container">
+        <img class="section-image right" src="images/img_section_4.png">
       </div>
+      <div class="col-lg-8">
+        <h1 id="participant">Participantes </h1>
+        <ul>
+          <li>Licenciado en Educación Infantil (educación de primera infancia, educación inicial educación infantil o áreas afines)</li>
+          <li>Artistas visuales, plásticos, dramáticos</li>
+          <li>Psicólogos</li>
+          <li>Ingenieros</li>
+          <li>Arquitectos</li>
+          <li>Familias o cuidadores</li>
+        </ul>
+      </div>
+    </div>
 
 
     <div class="row">
-        <div class="col-lg-4 image-container">
-            <img class="section-image left" src="images/img_section_5.png">
-          </div>        
-        <div class="col-lg-8">
-          <h1 id="award">Premios</h1>
-                
-        </div>
+      <div class="col-lg-4 image-container">
+        <img class="section-image left" src="images/img_section_5.png">
+      </div>
+      <div class="col-lg-8">
+        <h1 id="award">Premios</h1>
+
+      </div>
     </div>
 
-    <div class="row">        
-        <div class="col-lg-8">
-          <h1 id="organizers">Organizadores</h1>
-          <div class="col-lg-3 image-container">
-              <img class="section-image right" src="images/logo_01.png">
-          </div>
-          <div class="col-lg-3 image-container">
-              <img class="section-image right" src="images/logo_02.png">
-          </div>
-          <div class="col-lg-3 image-container">
-              <img class="section-image right" src="images/logo_03.png">
-          </div>
-          <div class="col-lg-3 image-container">
-              <img class="section-image right" src="images/logo_04.png">
-          </div>          
+    <div class="row">
+      <div class="col-lg-8">
+        <h1 id="organizers">Organizadores</h1>
+        <div class="col-lg-3 image-container">
+          <img class="section-image right" src="images/logo_01.png">
         </div>
+        <div class="col-lg-3 image-container">
+          <img class="section-image right" src="images/logo_02.png">
+        </div>
+        <div class="col-lg-3 image-container">
+          <img class="section-image right" src="images/logo_03.png">
+        </div>
+        <div class="col-lg-3 image-container">
+          <img class="section-image right" src="images/logo_04.png">
+        </div>
+      </div>
     </div>
 
   </div>
