Correccion en tamaño de fuentes

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           <li>Conforma un grupo de mínimo 3 y máximo 5 personas. Recuerda que entre más interdisciplinario, con mayor diversidad de habilidades o profesiones, más puntos de vista y mejores resultados podrán obtener.</li>
           <li>Si no es sencillo reunir un equipo, no importa, inscríbete de forma individual y harás parte de uno que podrás conformar el día de la maratón. Déjalo en nuestras manos.</li>
         </ol>
-        Despliega los términos y condiciones del concurso para más información y apresúrate. Recuerda que los cupos son limitados para cada ciudad.
+        <p>Despliega los términos y condiciones del concurso para más información y apresúrate. Recuerda que los cupos son limitados para cada ciudad.</p>
       </div>
     </div>
 
@@ -219,9 +219,6 @@
 
 
     <div class="row">
-      <div class="col-lg-4 image-container">
-        <img class="section-image right" src="images/img_section_4.png">
-      </div>
       <div class="col-lg-8 participant-section">
         <h1 id="participant">Participantes </h1>
         <ul>
@@ -232,6 +229,9 @@
           <li>Arquitectos</li>
           <li>Familias o cuidadores</li>
         </ul>
+      </div>
+      <div class="col-lg-4 image-container">
+        <img class="section-image right" src="images/img_section_4.png">
       </div>
     </div>
 
@@ -274,9 +274,9 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row organizers-section">
       <div class="col-lg-12 text-center">
-        <h1 id="organizers">Organizadores</h1>
+        <h1 id="organizers"><b>Organizadores</b></h1>
       </div>
       <div class="col-sm-6 text-center">
         <img class="img-fluid" src="images/logo_unal.png">
