Correccion de estructura

--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
           procesos educativos que se llevan a cabo en la institución durante todo el año escolar. </p>
       </div>
     </div>
-    <div class="row">
-      <div class="col-lg-8 description-section">
+    <div class="row description-section">
+      <div class="col-lg-8">
         <h1 id="description">Descripción</h1>
         <p>Con el propósito de construir colectivamente propuestas para el set de objetos asociados a la estrategia de acogida, bienestar y permanencia, el Ministerio de Educación Nacional en convenio con la Universidad Nacional de Colombia invitan
           a un evento de cocreación tipo JAM. Será una maratón creativa destinada a reunir personas de diferentes perfiles, habilidades, conocimientos y experiencias previas, con el fin de concebir el diseño y prototipo de diversos elementos que se
@@ -167,14 +167,14 @@
           Durante los días del evento se contará con la participación de expertos en educación inicial y diseño, quienes harán un acompañamiento permanente a los participantes y les orientarán sobre las características del reto y el desarrollo del
           prototipo. Adicionalmente, los participantes se encontrarán con ejercicios que promuevan el proceso creativo y finalmente con los materiales necesarios para la elaboración de maquetas que les permitan exponer con claridad sus propuestas.</p>
       </div>
-
-    </div>
-
-    <div class="row">
       <div class="col-lg-4 image-container">
         <img class="section-image right" src="images/img_section_2.png">
       </div>
-      <div class="col-lg-8">
+
+    </div>
+
+    <div class="row description-section">
+      <div class="col-lg-6">
         <h2>Información general del EduJAM:</h2>
         <ul>
           <li>Inscripciones abiertas hasta el 13 de febrero de 2019</li>
@@ -187,10 +187,7 @@
           <li>Las personas seleccionadas serán informadas vía telefónica y/o por correo electrónico, en donde se confirmará la participación y se informará el detalle de la agenda de actividades a realizar durante los 2 días del evento</li>
         </ul>
       </div>
-    </div>
-
-    <div class="row">
-      <div class="col-lg-8">
+      <div class="col-lg-6">
         <h2>¿Cómo inscribirse?</h2>
         <p>Existen dos modalidades de participación:</p>
         <ol>
