--- a/index.html
+++ b/index.html
@@ -11,6 +11,23 @@
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/index.js"></script>
+  <!-- Facebook Pixel Code -->
+  <script>
+      !function(f,b,e,v,n,t,s)
+      {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+      n.queue=[];t=b.createElement(e);t.async=!0;
+      t.src=v;s=b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t,s)}(window, document,'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+      fbq('init', '335644447054335');
+      fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=335644447054335&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Facebook Pixel Code -->
 </head>
 
 <body>
@@ -297,16 +314,16 @@
 
 
   <div class="footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-4">
-
-        </div>
-        <div class="col-sm-4">
-
-        </div>
-        <div class="col-sm-4">
-
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-3"></div>
+          <div class="col-sm-3">
+              <a href="https://www.facebook.com/GITEIUnal/" target="_blank"><p><img class="img-fluid" src="images/logo_facebook.png"> GITEIUnal</p></a>
+          </div>
+          <div class="col-sm-3">
+              <a href="https://twitter.com/giteiunal" target="_blank"><p><img class="img-fluid" src="images/logo_twitter.png"> @giteiunal</p></a>
+          </div>
+          <div class="col-sm-3"></div>
         </div>
       </div>
     </div>
