Cambios en estilos

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         Inscripción grupal
       </a>
     </div>
-    <div class="row places">
+    <div class="row places shadow-line-bottom">
       <div class="col-sm-4 text-center">
         <img class="img-fluid" src="images/bogota.png">
       </div>
@@ -158,7 +158,7 @@
     </div>
   </div>
   <div class="container main-content">
-    <div class="row">
+    <div class="row py-4 shadow-line-bottom">
       <div class="col-lg-4 image-container">
         <img class="section-image left" src="images/img_section_1.png">
       </div>
@@ -174,7 +174,7 @@
           procesos educativos que se llevan a cabo en la institución durante todo el año escolar. </p>
       </div>
     </div>
-    <div class="row description-section">
+    <div class="row pt-4 description-section">
       <div class="col-lg-8">
         <h1 id="description">Descripción</h1>
         <p>Con el propósito de construir colectivamente propuestas para el set de objetos asociados a la estrategia de acogida, bienestar y permanencia, el Ministerio de Educación Nacional en convenio con la Universidad Nacional de Colombia invitan
@@ -189,9 +189,8 @@
       </div>
 
     </div>
-
-    <div class="row description-section">
-      <div class="col-lg-6">
+    <div class="row pb-4 description-section shadow-line-bottom">
+      <div class="col-xl-6">
         <h2>Información general del EduJAM:</h2>
         <ul>
           <li>Inscripciones abiertas hasta el 13 de febrero de 2019</li>
@@ -204,7 +203,7 @@
           <li>Las personas seleccionadas serán informadas vía telefónica y/o por correo electrónico, en donde se confirmará la participación y se informará el detalle de la agenda de actividades a realizar durante los 2 días del evento</li>
         </ul>
       </div>
-      <div class="col-lg-6">
+      <div class="col-xl-6">
         <h2>¿Cómo inscribirse?</h2>
         <p>Existen dos modalidades de participación:</p>
         <ol>
@@ -214,11 +213,7 @@
         <p>Despliega los términos y condiciones del concurso para más información y apresúrate. Recuerda que los cupos son limitados para cada ciudad.</p>
       </div>
     </div>
-
-
-
-
-    <div class="row">
+    <div class="row py-4 shadow-line-bottom">
       <div class="col-lg-4 image-container">
         <img class="section-image left" src="images/img_section_3.png">
       </div>
@@ -230,9 +225,7 @@
           aportarán en la interacción entre niñas, niños, familias y maestros.</p>
       </div>
     </div>
-
-
-    <div class="row">
+    <div class="row py-4 shadow-line-bottom">
       <div class="col-lg-8 participant-section">
         <h1 id="participant">Participantes </h1>
         <ul>
@@ -248,8 +241,7 @@
         <img class="section-image right" src="images/img_section_4.png">
       </div>
     </div>
-
-    <div class="row">
+    <div class="row py-4 shadow-line-bottom">
       <div class="col-lg-4 image-container">
         <img class="section-image left" src="images/img_section_5.png">
       </div>
@@ -287,8 +279,7 @@
         </table>
       </div>
     </div>
-
-    <div class="row organizers-section">
+    <div class="row py-4 organizers-section">
       <div class="col-lg-12 text-center">
         <h1 id="organizers"><b>Organizadores</b></h1>
       </div>
@@ -308,11 +299,7 @@
         <img class="img-fluid" src="images/logo_udc.png">
       </div>
     </div>
-
-
   </div>
-
-
   <div class="footer">
       <div class="container">
         <div class="row">
