Arreglo de tabla e icono de twitter

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="js/index.js"></script>
   <!-- Facebook Pixel Code -->
   <script>
-      !function(f,b,e,v,n,t,s)
+    !function(f,b,e,v,n,t,s)
       {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
       n.callMethod.apply(n,arguments):n.queue.push(arguments)};
       if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
@@ -24,10 +24,8 @@
       fbq('init', '335644447054335');
       fbq('track', 'PageView');
     </script>
-    <noscript><img height="1" width="1" style="display:none"
-      src="https://www.facebook.com/tr?id=335644447054335&ev=PageView&noscript=1"
-    /></noscript>
-    <!-- End Facebook Pixel Code -->
+  <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=335644447054335&ev=PageView&noscript=1" /></noscript>
+  <!-- End Facebook Pixel Code -->
 </head>
 
 <body>
@@ -247,36 +245,37 @@
       </div>
       <div class="col-lg-8 award-section">
         <h1 id="award">Premios</h1>
+        <div class="table-responsive">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Primer lugar</th>
+                <th scope="col">Segundo lugar</th>
+                <th scope="col">Tercer lugar</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
 
-        <table class="table">
-          <thead>
-            <tr>
-              <th scope="col">Primer lugar</th>
-              <th scope="col">Segundo lugar</th>
-              <th scope="col">Tercer lugar</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
+                <td>Divulgar ganadores por medio de comunicaciones del Ministerio de Educación Nacional y Universidad Nacional de Colombia</td>
+                <td>Divulgar ganadores por medio de comunicaciones del Ministerio de Educación Nacional y Universidad Nacional de Colombia</td>
+                <td>Divulgar ganadores por medio de comunicaciones del Ministerio de Educación Nacional y Universidad Nacional de Colombia</td>
+              </tr>
+              <tr>
 
-              <td>Divulgar ganadores por medio de comunicaciones del Ministerio de Educación Nacional y Universidad Nacional de Colombia</td>
-              <td>Divulgar ganadores por medio de comunicaciones del Ministerio de Educación Nacional y Universidad Nacional de Colombia</td>
-              <td>Divulgar ganadores por medio de comunicaciones del Ministerio de Educación Nacional y Universidad Nacional de Colombia</td>
-            </tr>
-            <tr>
+                <td>Reconocimiento de su participación y creaciones</td>
+                <td>Parlantes Bluetooth</td>
+                <td>Cámara deportiva 4k Wifi sumergible</td>
+              </tr>
+              <tr>
 
-              <td>Reconocimiento de su participación y creaciones</td>
-              <td>Parlantes Bluetooth</td>
-              <td>Cámara deportiva 4k Wifi sumergible</td>
-            </tr>
-            <tr>
-
-              <td>Bose Soundlink MicroAltavoz</td>
-              <td></td>
-              <td></td>
-            </tr>
-          </tbody>
-        </table>
+                <td>Bose Soundlink MicroAltavoz</td>
+                <td></td>
+                <td></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
     <div class="row py-4 organizers-section">
@@ -301,17 +300,21 @@
     </div>
   </div>
   <div class="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-3"></div>
-          <div class="col-sm-3">
-              <a href="https://www.facebook.com/GITEIUnal/" target="_blank"><p><img class="img-fluid" src="images/logo_facebook.png"> GITEIUnal</p></a>
-          </div>
-          <div class="col-sm-3">
-              <a href="https://twitter.com/giteiunal" target="_blank"><p><img class="img-fluid" src="images/logo_twitter.png"> @giteiunal</p></a>
-          </div>
-          <div class="col-sm-3"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-3"></div>
+        <div class="col-sm-3 text-center">
+          <a href="https://www.facebook.com/GITEIUnal/" target="_blank">
+            <p><img class="img-fluid" src="images/logo_facebook.png"> GITEIUnal</p>
+          </a>
         </div>
+        <div class="col-sm-3 text-center">
+          <a href="https://twitter.com/giteiunal" target="_blank">
+            <p><img class="img-fluid" src="images/logo_twitter.png"> @giteiunal</p>
+          </a>
+        </div>
+        <div class="col-sm-3"></div>
       </div>
     </div>
+  </div>
 </body>
